# fabio-gpt

./: .gitignore  README.md  pyproject.toml
app/: .env_example.txt  ia_module.py  main.py  secrets.toml  style.css  utils.py
