[tool.poetry]
name = "streamlit-proj-1"
version = "0.1.0"
description = ""
authors = ["fspjonny <fabiosilvapedro@yahoo.com.br>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
streamlit-pydantic = "^0.6.0"
pydantic-settings = "^2.6.1"
groq = "^0.13.0"
python-decouple = "^3.8"

[tool.poetry.packages]
include = "app" 

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
